<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.kimplusdelta.vca.activities.SettingsActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/kim_floating_box_btn">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prevent_sleep"
            android:id="@+id/sleep_button"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:background="@null"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp" />

        <CheckBox
            android:layout_width="32dp"
            android:layout_height="match_parent"
            android:id="@+id/sleepCheckBox"
            android:gravity="center"
            android:layout_gravity="end"
            android:checked="true"
            android:button="@drawable/custom_checkbox"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp" />

    </FrameLayout>

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_history"
        android:id="@+id/delete_history_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/kim_floating_box_btn"
        android:textColor="@android:color/white"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rate_app"
        android:id="@+id/rate_me_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/kim_floating_box_btn"
        android:textColor="@android:color/white"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_me"
            android:id="@+id/share_button"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/kim_floating_box_btn"
            android:textColor="@android:color/white"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp" />

        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:id="@+id/contact_button"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/kim_floating_box_btn"
        android:textColor="@android:color/white"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login1"
            android:id="@+id/login_user"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/kim_floating_box_btn"
            android:textColor="@android:color/white"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="LogInFunction" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout1"
            android:id="@+id/logout_user"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/kim_floating_box_btn"
            android:textColor="@android:color/white"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="LogOutFunction" />



</LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:id="@+id/imageView6"
        android:src="@drawable/kim_plus_delta_logo"
        android:scaleType="fitEnd"
        android:layout_gravity="bottom|center_horizontal"
        android:contentDescription="@string/desc_kim_logo"
        android:layout_margin="16dp" />
</merge>