<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_bg"
    android:orientation="vertical"
    tools:context="nl.kimplusdelta.vca.activities.ResultsActivity">


    <TextView
        android:id="@+id/resultLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kim_color"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/exam_failed"
        android:textColor="@color/text_white"
        android:textSize="@dimen/_20ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kim_color"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/relativeLayout11"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="@color/color_blue_1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/pctLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_white"
                android:textSize="@dimen/_35ssp"
                tools:text="60%" />

            <TextView
                android:id="@+id/requiredPctLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:paddingBottom="@dimen/_5sdp"
                android:text="@string/required_score_result"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_normal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center|start"
            android:layout_weight="1"
            android:background="@color/color_blue_2"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/scoreLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_normal"
                tools:text="6/40" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/score"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_normal" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_blue_3"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible">

            <TextView
                android:id="@+id/timeLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_normal"
                tools:text="2" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/time"
                android:textColor="@color/text_white"
                android:textSize="@dimen/font_size_normal" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/kim_color"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/shareButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/shareImage"
                android:layout_width="@dimen/_15sdp"
                android:layout_height="@dimen/_15sdp"
                android:contentDescription="@string/img_desc_share_me"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_share_white" />


            <TextView
                android:id="@+id/shareDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/_10sdp"
                android:text="@string/share_me"
                android:textColor="@color/text_white"
                android:textSize="14sp" />

        </LinearLayout>

        <View
            android:layout_width="0.5dp"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@color/text_white" />

        <LinearLayout
            android:id="@+id/rateMeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/purchaseImage"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/img_desc_buy_me"
                android:gravity="center_horizontal"
                android:src="@drawable/ic_star_rate" />


            <TextView
                android:id="@+id/purchaseDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:padding="@dimen/_10sdp"
                android:text="@string/rate_app"
                android:textColor="@color/text_white"
                android:textSize="14sp" />

        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@android:color/transparent"
        android:dividerHeight="@dimen/_5sdp"
        android:visibility="visible" />


</LinearLayout>
