<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/popupContainer"
    android:background="#80000000"
    tools:ignore="Overdraw">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/floating_box"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/titleLabel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/tutorial_header"
            android:textSize="40.0sp"
            android:layout_marginBottom="16dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/tutorial_text_lite"
            android:id="@+id/contentLabel"
            android:layout_below="@+id/titleLabel"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:gravity="center"
            android:textSize="@dimen/font_size_normal" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/main_menu_exam"
            android:id="@+id/startButton"
            android:visibility="visible"
            android:background="@drawable/kim_floating_borderless_box_btn"
            android:textColor="@android:color/white"
            android:layout_below="@+id/contentLabel"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp" />
    </RelativeLayout>

</RelativeLayout>